# aquaculture-IOT

./: .gitignore  API.md  CMakeLists.txt  HOW_WE_MADE_IT_WORK.md  MUST_READ_FOR_AI.md  README.md  fix_sensors.md  monitor.sh  screenlog.0  sdkconfig  sdkconfig.defaults  test_sensors.sh
certificates/: cert.h  server_cert.pem
docs/: DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_SPECIFICATIONS.md  TROUBLESHOOTING_GUIDE.md  data_flow.puml  generate_charts.py  network_architecture.puml  system_architecture.puml
main/: CMakeLists.txt  adc_config.h  adc_handler.h  aquaculture_monitor.c  cert.h  cert_manager.c  cert_manager.h  certs_config.h  load_cert.h  ph_sensor.h  provision_certs.c  provision_certs.h
