idf_component_register(SRCS "aquaculture_monitor.c"
                    "cert_manager.c"
                    "provision_certs.c"
                    INCLUDE_DIRS "."
                    EMBED_TXTFILES "../certificates/server_cert.pem"
                                  "../certificates/isrg_root_x1.pem"
                                  "../certificates/cert.h"
                    REQUIRES "esp_http_client"
                            "json"
                            "mbedtls"
                            "esp-tls"
                            "nvs_flash"
                            "driver"
                            "esp_adc"
                            "esp_wifi"
                            "esp_event"
                            "esp_timer"
                            "esp_driver_gpio")
